--- a/package.json
+++ b/package.json
@@ -9,6 +9,23 @@
   },
   "author": "Guilherme Tabelini",
   "license": "ISC",
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "mapCoverage": true,
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/lib/"
+    ],
+    "testRegex": "(/test/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ]
+  },
   "dependencies": {
     "@types/bunyan": "^1.8.3",
     "@types/node": "^8.0.53",
@@ -25,6 +42,11 @@
     "typescript": "^2.6.2"
   },
   "devDependencies": {
+    "@types/jest": "^21.1.8",
+    "@types/supertest": "^2.0.4",
+    "jest": "^21.2.1",
+    "supertest": "^3.0.0",
+    "ts-jest": "^21.2.4",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0"
   }
